--- a/components/wrappers/Expander/Expander.module.css
+++ b/components/wrappers/Expander/Expander.module.css
@@ -4,16 +4,25 @@
 }
 
 .header {
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .expandButton {
-    
+    cursor: pointer;
+    background: none;
+    border: none;
+    padding: 0;
 }
 
 .body {
-    display: none;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease;
 }
-.body.expanded {
-    display: flex;
+
+.rotate {
+    transform: rotate(180deg);
+    transition: transform 0.3s ease;
 }
