--- a/components/wrappers/Expander/Expander.module.css
+++ b/components/wrappers/Expander/Expander.module.css
@@ -1,19 +1,12 @@
 .expander {
-    border: 2px solid red;
+    border: 2px solid var(--border-color);
     transition: all 0.3s ease;
 }
 
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.expandButton {
     cursor: pointer;
     background: none;
     border: none;
-    padding: 0;
 }
 
 .body {
