--- a/variables.css
+++ b/variables.css
@@ -79,10 +79,12 @@ body.light {
     --success-hover-color: #00963c;
     --warning-hover-color: #dfa023;
     --error-hover-color: #d82727;
+    --tip-hover-color: #752797;
     --info-active-color: #106c8d;
     --success-active-color: #006b2b;
     --warning-active-color: #ac7915;
     --error-active-color: #ac1515;
+    --tip-active-color: #5c1c77;
 
     /* BORDER */
     --border-color: #999;
@@ -154,10 +156,12 @@ body.dark {
     --success-hover-color: #00963c;
     --warning-hover-color: #dfa023;
     --error-hover-color: #d82727;
+    --tip-hover-color: #752797;
     --info-active-color: #106c8d;
     --success-active-color: #006b2b;
     --warning-active-color: #ac7915;
     --error-active-color: #ac1515;
+    --tip-active-color: #5c1c77;
     
     /* BORDER */
     --border-color: #3d444d;
