--- a/components/wrappers/Expander/Expander.module.css
+++ b/components/wrappers/Expander/Expander.module.css
@@ -18,6 +18,15 @@
 
     box-sizing: border-box;
 }
+.readonly {
+    min-height: 30px;
+    
+    font-weight: bold;
+    letter-spacing: 1.5px;
+
+    font-family: inherit;
+    font-size: 12px;
+}
 
 .body {
     max-height: 0;
