--- a/styles.css
+++ b/styles.css
@@ -485,15 +485,15 @@ h1.article {
 }
 
 input {
-  background-color: transparent;
-  color: var(--font-color);
+  background-color: transparent !important;
+  color: var(--font-color) !important;
 }
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus{
-  background-color: transparent;
-  transition: background-color 50000s ease-in-out 0s;
-  -webkit-text-fill-color: var(--font-color);
+input:-webkit-autofill:focus {
+  background-color: transparent !important;
+  transition: background-color 0s 600000s, color 0s 600000s !important;
+  -webkit-text-fill-color: var(--font-color) !important;
 }
 
 /* CURSOR */
