--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,11 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 
-    background-color: var(--code-bk);
+    /* background-color: var(--code-bk);
     color: var(--code-font-color);
 
     padding: 2px 5px 2px 5px;
-    border-radius: 5px;
+    border-radius: 5px; */
 }
 
 p {
@@ -95,7 +95,7 @@ a:hover {
 
   box-shadow: var(--panel-shadow);
 
-  transition: all 0.1s ease;
+  transition: box-shadow 0.1s ease;
 
   background-color: var(--panel-bk);
 }
