new things and.. can remove transparent tb

--- a/variables.css
+++ b/variables.css
@@ -156,8 +156,8 @@ body.dark {
     /*        */    
 
     /* BACKGROUND */
-    --bk-color: #242424;
-    --body-bk-color: #262626;
+    --bk-color: #1b1b1b;
+    --body-bk-color: #292929;
     --header-bk-color: #1e1f22;
     --panel-bk: #333;
     
