--- a/components/ui/input/text/ExTextBox/ExTextBox.module.css
+++ b/components/ui/input/text/ExTextBox/ExTextBox.module.css
@@ -36,6 +36,12 @@
     padding: 10px 0 0 0;
     border-radius: 0;
     font-family: inherit;
+
+    outline: 0;
+    border: 0;
+
+    font-size: medium;
+    color: var(--font-color);
 }
 
 .icon svg {
