--- a/components/ui/input/text/TransparentTextBox/TransparentTextBox.module.css
+++ b/components/ui/input/text/TransparentTextBox/TransparentTextBox.module.css
@@ -2,14 +2,12 @@
     display: flex;
     flex-grow: 1;
 
-    outline: 0;
-
-    border: 0;
+    
     border-radius: 50px;
 
     padding: 10px;
 
-    font-size: medium;
+    
 
-    color: var(--font-color);
+    text-wrap: wrap;
 }
