--- a/styles.css
+++ b/styles.css
@@ -495,6 +495,11 @@ h1.article {
   background: rgba(0, 0, 0, 0.2);
 }
 
+textarea {
+  background-color: transparent;
+  color: var(--font-color);
+}
+
 input {
   background-color: transparent !important;
   color: var(--font-color) !important;
