--- a/components/ui/input/text/ExTextBox/ExTextBox.module.css
+++ b/components/ui/input/text/ExTextBox/ExTextBox.module.css
@@ -61,7 +61,7 @@
     font-family: inherit;
     font-size: medium;
 
-    padding: 0;
+    padding: 10px 0 0 0;
     margin: 0;
 
     width: 100%; /* Добавлено */
