Colors and logic fixes

--- a/components/widgets/user/UserDataPanel/UserDataPanel.module.css
+++ b/components/widgets/user/UserDataPanel/UserDataPanel.module.css
@@ -3,5 +3,6 @@
 }
 
 .panel {
-    background-color: var(--dropdown-bk);
+    background-color: var(--panel-bk);
+    border: 1px solid var(--accent-color);
 }
