--- a/components/pages/base/PageBase/PageBase.module.css
+++ b/components/pages/base/PageBase/PageBase.module.css
@@ -4,6 +4,7 @@
 
     --navigation-bk-color: var(--body-bk-color);
 
+
     background-color: var(--bk-color);
 
     min-height: 100vh;
@@ -12,60 +13,27 @@
     box-sizing: border-box;
 }
 
+.navigation {
+    width: calc((100% - var(--body-width)) / 2);
+    height: calc(100% - var(--header-hight));
+
+    left: 0;
+
+    background: rgba(127, 15, 18, 0.5);
+}
+
 .body {
     max-width: var(--body-width);
     width: 100%;
 
-    background-color: indianred;
-
-    padding: 20px 50px;
-
-    box-sizing: border-box;
+    background: rgba(15, 127, 18, 0.5);
 }
 
-.overlay {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: var(--header-hight);
-}
+.contents {
+    width: calc((100% - var(--body-width)) / 2);
+    height: calc(100% - var(--header-hight));
 
-.header {
-    width: 100%;
-    height: 100%;
-    background: green;
-}
-
-.headercontainer {
-    max-width: var(--body-width);
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    position: relative;
-}
-
-.headertitle {
-    position: absolute;
-    left: 0;
-    top: 0;
-    transform: translateX(-100%);
-
-    padding-right: 30px;
-
-    background: orange;
-}
-.headerbody {
-    padding-left: 80px;
-    
-    background: blue;
-}
-.endheader {
-    position: absolute;
     right: 0;
-    top: 0;
-    transform: translateX(100%);
 
-    padding-left: 30px;
-
-    background: pink;
+    background: rgba(18, 15, 127, 0.5);
 }
