--- a/components/pages/base/PageBase/PageBase.module.css
+++ b/components/pages/base/PageBase/PageBase.module.css
@@ -3,52 +3,53 @@
     --header-hight: 60px;
 
     --navigation-bk-color: var(--body-bk-color);
-
+    /* --border-color: var(--accent-color); */
 
     background-color: var(--bk-color);
 
     min-height: 100vh;
     padding-top: var(--header-hight);
-
-    box-sizing: border-box;
 }
 
 .overlay {
-    background: rgba(0, 100, 0, 0.5);
-
     top: 0;
 }
 
 .header {
     height: var(--header-hight);
 
-    background: rgba(100, 0, 0, 0.5);
+    border-bottom: 1px solid var(--border-color);
+
+    background-color: var(--bk-color);
 }
 .headerTitle {
     width: calc((100% - var(--body-width)) / 2);
     left: 0;
 
-    background: rgba(0, 0, 100, 0.5);
+    padding-right: 30px;
 }
 .headerContent {
     max-width: var(--body-width);
 
-    background: rgba(200, 0, 100, 0.5);
+    padding-left: 60px;
 }
 .headerEndtitle {
     width: calc((100% - var(--body-width)) / 2);
     right: 0;
 
-    background: rgba(0, 200, 100, 0.5);
+    padding-left: 30px;
 }
 
 .boder {
-    background: rgba(127, 127, 18, 0.5);
+    
 }
 .navigation {
     width: calc((100% - var(--body-width)) / 2);
     left: 0;
-    background: rgba(127, 15, 18, 0.5);
+
+    background-color: var(--navigation-bk-color);
+
+    border-right: 1px solid var(--border-color);
 }
 .boderBodyMask {
     max-width: var(--body-width);
@@ -56,7 +57,10 @@
 .contents {
     width: calc((100% - var(--body-width)) / 2);
     right: 0;
-    background: rgba(18, 15, 127, 0.5);
+
+    border-left: 1px solid var(--border-color);
+
+    background-color: var(--bk-color);
 }
 
 
@@ -64,5 +68,5 @@
     max-width: var(--body-width);
     width: 100%;
 
-    background: rgba(15, 127, 18, 0.5);
+    padding: 40px 60px;
 }
