--- a/variables.css
+++ b/variables.css
@@ -206,7 +206,7 @@ body.dark {
     
     /* TEXT */
     --caption-font-color: #9c9c9c;
-    --font-color: #efefef;
+    --font-color: #c6c6c9;
     --highlight-font-color: #5e6e7e;
     --inverse-font-color: #333;
     --subtitle-font-color: #fefefe;
