--- a/components/pages/base/NavButton/NavButton.module.css
+++ b/components/pages/base/NavButton/NavButton.module.css
@@ -7,11 +7,14 @@
     outline: 0;
     border: 0;
 
-    height: 35px;
+    height: 20px;
 
     color: var(--font-color);
 
     padding: 5px 0 5px 20px;
+
+    text-decoration: none;
+    font-size: 0.9rem;
 }
 .btn:hover {
     color: var(--accent-color);
@@ -25,7 +28,7 @@
     font-family: inherit;
 }
 
-.selected {
+.active {
     background-color: var(--button-bk);
     color: var(--accent-color);
     border-right: 1px solid var(--accent-color);
