--- a/components/ui/buttons/ToggleButton/ToggleButton.module.css
+++ b/components/ui/buttons/ToggleButton/ToggleButton.module.css
@@ -2,6 +2,11 @@
     width: 30px;
     height: 30px;
     user-select: none;
+
+    transition: color 0.12s ease-in;
+}
+.icon svg:hover {
+    color: var(--accent-color);
 }
 
 .button {
