--- a/components/pages/base/PageBase/PageBase.module.css
+++ b/components/pages/base/PageBase/PageBase.module.css
@@ -21,9 +21,9 @@
     min-width: 300px;
     max-width: 280px;
 
-    padding-right: 30px;
+    /* padding-right: 30px; */
 
-    border-right: 1px solid var(--border-color);
+    /* border-right: 1px solid var(--border-color); */
 }
 
 .headerContent {
