--- a/components/pages/base/PageBase/PageBase.module.css
+++ b/components/pages/base/PageBase/PageBase.module.css
@@ -77,10 +77,6 @@
     pointer-events: all;
 }
 
-.boderBodyMask {
-    
-}
-
 @media (max-width: 1600px) {
     .page {
         /* --body-width: 1000px; */
@@ -109,7 +105,7 @@
     }
     .headerContent {
         position: absolute;
-        right: 0px;
+        right: 5px;
         top: 15px;
     }
     .headerTitle {
@@ -124,15 +120,28 @@
 
 .mobileMenuButton {
     display: none;
+
+    border: 0;
+    outline: 0;
+    background: none;
+
+    color: var(--font-color);
+
+    pointer-events: all;
+}
+
+.closeNav {
+    left: -120px;
+    top: 24px;
 }
 
 @media (max-width: 960px) {
     .mobileMenuButton {
         display: block;
         position: fixed;
-        top: 10px;
-        left: 10px;
-        z-index: 1000;
+        top: 15px;
+        left: 15px;
+        z-index: 998;
     }
     
     .navigation {
