--- a/components/pages/base/base.module.css
+++ b/components/pages/base/base.module.css
@@ -9,6 +9,7 @@
     }
     .login {
         padding: 0;
+        font-size: 10px;
     }
     .flex10 {
         gap: 10px !important;
@@ -19,5 +20,8 @@
     .title {
         padding: 0;
         border: 0;
+    }
+    .header {
+        font-size: 10px;
     }
 }
